the online full version v1.0

--- a/syncCluster/src/main/resource/layout.properties
+++ b/syncCluster/src/main/resource/layout.properties
@@ -5,3 +5,4 @@ sync.consumer.socket.timeout.ms=200000
 sync.consumer.read.bufferszie.bytes=1048576
 sync.consumer.startoffsettime=
 sync.offsetupdate.refresh.sec=60
+sync.producer.target.topic=sync_1
